# paricoin

./: pyproject.toml  test_hash.py
paricoin/: blockchain.py  utils.py
tests/: practice.py
