[tool.poetry]
name = "paricoin"
version = "0.1.0"
description = ""
authors = ["ParimalShivendu <parimal.shivendu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynacl = "^1.6.2"
structlog = "^26.1.0"
colorama = "^0.4.6"
marshmallow = "^4.3.0"
marshmallow-oneofschema = "^3.2.0"
aiohttp = "^3.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
